--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\def\\CC{\\bf C}\n",
-    "\\def\\QQ{\\bf Q}\n",
-    "\\def\\RR{\\bf R}\n",
-    "\\def\\ZZ{\\bf Z}\n",
-    "\\def\\NN{\\bf N}\n",
-    "$$\n",
     "# Lean Tutorial\n",
     "\n",
     "This tutorial runs through all of the steps for doing a project with\n",
@@ -370,5 +363,8 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 2,
+ "nbsphinx": {
+  "execute": "never"
+ },
 }
