--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -358,13 +358,13 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
+   "nbsphinx": {
+    "execute": "never"
+   },
    "pygments_lexer": "ipython3",
    "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2,
- "nbsphinx": {
-  "execute": "never"
- },
+ "nbformat_minor": 2
 }
