changes tex to plain text

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## Project Description\n",
     "\n",
-    "**Calculate the \\[NII\\]/H**$\\alpha$ **ratio for star-forming spaxels in\n",
+    "**Calculate the \\[NII\\]/Halpha ratio for star-forming spaxels in\n",
     "galaxies with stellar mass between** $10^{10}$ **and** $10^{11}$ **.**\n",
     "\n",
     "## Sample Selection\n",
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the H$\\alpha$ maps:"
+    "Get the Halpha maps:"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot H$\\alpha$ map of the second galaxy:"
+    "Plot Halpha map of the second galaxy:"
    ]
   },
   {
@@ -290,9 +290,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot \\[NII\\]/H$\\alpha$ Flux Ratio for Star-forming Spaxels\n",
+    "## Plot \\[NII\\]/Halpha Flux Ratio for Star-forming Spaxels\n",
     "\n",
-    "Calculate \\[NII\\]6585/H$\\alpha$ flux ratio:"
+    "Calculate \\[NII\\]6585/Halpha flux ratio:"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the \\[NII\\]/H$\\alpha$ flux ratio for the star-forming spaxels:"
+    "Plot the \\[NII\\]/Halpha flux ratio for the star-forming spaxels:"
    ]
   },
   {
