fixes some links

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -44,10 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tip**: see [Marvin Query](marvin-query.ipynb) to learn the basics of\n",
-    "querying. See [Example Queries](marvin-query-examples.ipynb) and [Marvin\n",
-    "Query Syntax Tutorial](marvin-sqlboolean.ipynb) for help with designing\n",
-    "search filters.\n",
+    "**Tip**: see [Marvin Query](https://sdss-marvin.readthedocs.io/en/latest/tutorials/notebooks/marvin_queries.html) to learn the basics of querying. See [Marvin Query Syntax Tutorial](https://sdss-marvin.readthedocs.io/en/latest/tutorials/boolean-search-tutorial.html) for help with designing search filters.\n",
     "\n",
     "View the `~marvin.tools.query.results.Results`. You may see a different\n",
     "set of results. That is ok as long as you see some set of results.:"
@@ -67,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert into `../tools/maps` objects:"
+    "Convert into [Maps](https://sdss-marvin.readthedocs.io/en/bug-612-nbconvert/tools/maps.html) objects:"
    ]
   },
   {
