updates links in lean tutorial

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -26,7 +26,7 @@
     "**Goal**: Find galaxies with stellar mass between $10^{10}$ and\n",
     "$10^{11}$.\n",
     "\n",
-    "Create the query with `~marvin.tools.query.query.doQuery` and run it\n",
+    "Create the query with [doQuery()](https://sdss-marvin.readthedocs.io/en/latest/reference/queries.html#marvin.tools.query.doQuery) and run it\n",
     "(limit to only 3 results for demo purposes):"
    ]
   },
@@ -46,8 +46,8 @@
    "source": [
     "**Tip**: see [Marvin Query](https://sdss-marvin.readthedocs.io/en/latest/tutorials/notebooks/marvin_queries.html) to learn the basics of querying. See [Marvin Query Syntax Tutorial](https://sdss-marvin.readthedocs.io/en/latest/tutorials/boolean-search-tutorial.html) for help with designing search filters.\n",
     "\n",
-    "View the `~marvin.tools.query.results.Results`. You may see a different\n",
-    "set of results. That is ok as long as you see some set of results.:"
+    "View the [Results](https://sdss-marvin.readthedocs.io/en/latest/query/results.html). You may see a different\n",
+    "set of results. That is ok as long as you see some set of results."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert into [Maps](https://sdss-marvin.readthedocs.io/en/bug-612-nbconvert/tools/maps.html) objects:"
+    "Convert into [Maps](https://sdss-marvin.readthedocs.io/en/latest/tools/maps.html) objects:"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "## Get the Maps\n",
     "\n",
     "Alternatively, maybe we already knew our galaxy IDs, which we can use to\n",
-    "create `~marvin.tools.maps.Maps` objects:"
+    "create [Maps](https://sdss-marvin.readthedocs.io/en/latest/tools/maps.html) objects:"
    ]
   },
   {
@@ -148,9 +148,8 @@
     "interactive matplotlib plotting window. When the cursor is over the\n",
     "spaxel of interest, the coordinates will appear in the lower right.\n",
     "\n",
-    "Then we can create a `~marvin.tools.spaxel.Spaxel` object by accessing\n",
-    "the parent `~marvin.tools.maps.Maps` object from the\n",
-    "`~marvin.tools.quantities.Map` object (`haflux_map.maps`) and retrieve\n",
+    "Then we can create a [Spaxel](https://sdss-marvin.readthedocs.io/en/latest/tools/spaxel.html) object by accessing the parent [Maps](https://sdss-marvin.readthedocs.io/en/latest/tools/maps.html) object from the\n",
+    "[Map](https://sdss-marvin.readthedocs.io/en/latest/tools/map.html) object (`haflux_map.maps`) and retrieve\n",
     "the model fit."
    ]
   },
@@ -199,7 +198,7 @@
    "source": [
     "## Plot BPT Diagram\n",
     "\n",
-    "The `~marvin.tools.maps.Maps.get_bpt` returns masks for spaxels of\n",
+    "The [get_bpt()](https://sdss-marvin.readthedocs.io/en/latest/reference/tools.html#marvin.tools.maps.Maps.get_bpt) method returns masks for spaxels of\n",
     "different ionization types and the Figure object."
    ]
   },
@@ -326,9 +325,9 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "-   [Getting Started](https://sdss-marvin.readthedocs.io/en/stable/getting-started.html) (more general introduction to Marvin)\n",
-    "-   [Plotting Tutorial](https://sdss-marvin.readthedocs.io/en/stable/tutorials/plotting-tutorial.html)\n",
-    "-   [Download Data](https://sdss-marvin.readthedocs.io/en/stable/tools/downloads.html) (avoid repeating the same remote API calls every time you run your script)"
+    "-   [Basics of Marvin](https://sdss-marvin.readthedocs.io/en/latest/tutorials/notebooks/Basics_of_Marvin.html) (more general introduction to Marvin)\n",
+    "-   [Plotting Tutorial](https://sdss-marvin.readthedocs.io/en/latest/tutorials/plotting-tutorial.html)\n",
+    "-   [Download Data](https://sdss-marvin.readthedocs.io/en/latest/tools/downloads.html) (avoid repeating the same remote API calls every time you run your script)"
    ]
   },
   {
