execute lean tutorial

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -349,7 +349,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.1"
-  }
+  },
+  "nbsphinx": {
+   "execute": "always"
+  },
  },
  "nbformat": 4,
  "nbformat_minor": 2
