--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -334,9 +334,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:marvindev]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-marvindev-py"
   },
   "language_info": {
    "codemirror_mode": {
