tries python kernel

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -334,9 +334,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:marvindev]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-marvindev-py"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
