allows errors in notebooks

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -36,6 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from marvin import config\n",
+    "config.release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from marvin.tools.query import doQuery\n",
     "q, r = doQuery(search_filter='nsa.sersic_logmass >= 10 and nsa.sersic_logmass <= 11', limit=3)"
    ]
