force remote mode for query

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "from marvin.tools.query import doQuery\n",
-    "q, r = doQuery(search_filter='nsa.sersic_logmass >= 10 and nsa.sersic_logmass <= 11', limit=3)"
+    "q, r = doQuery(search_filter='nsa.sersic_logmass >= 10 and nsa.sersic_logmass <= 11', limit=3, mode='remote')"
    ]
   },
   {
