try explicitly importing marvin

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -104,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from marvin.tools.maps import Maps\n",
+    "import marvin\n",
+    "from marvin.tools import Maps\n",
     "mangaids = ['1-245458', '1-22301', '1-605884']\n",
     "galaxies = [Maps(mangaid=mangaid) for mangaid in mangaids]"
    ]
