tries to load a maps

--- a/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
+++ b/docs/sphinx/tutorials/notebooks/lean-tutorial.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from marvin import config\n",
-    "config.release"
+    "from marvin.tools import Maps\n",
+    "Maps('8485-1901')"
    ]
   },
   {
